deploy/k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello
  namespace: default
  labels:
    application: hello
    version: "3-jb"
spec:
  replicas: 1
  selector:
    matchLabels:
      application: hello
  template:
    metadata:
      labels:
        application: hello
        version: "3-jb"
    spec:
      containers:
      - name: hello
        image: sigmalab/hello:3-jb
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 7979
          name: management
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /management/health
            port: 7979
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 20
