deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
  labels:
    application: hello
spec:
  selector:
    application: hello
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
