deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: minikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
